clean serde
Signed-off-by: vmouradian <valentin.mouradian@artelys.com>